  * debhelper.pod: Move list of supported compat levels and the related
    upgrade checklist into debhelper-compat-upgrade-checklist.pod.
    This means you now need `man 7 debhelper-compat-upgrade-checklist`
    to see the upgrade checklist.
  * dh_installdebconf: Support -D/--define command line parameters
    (mirroring those from dh_installdeb).

  [ Guillem Jover ]
  * autoconf.pm: Add support for autotest test suites by passing the
    TESTSUITEFLAGS environment variable to `make test`.

  [ Dave Jones ]
  * Rewrite handling of stop services to use the `preinst` when using
    --no-restart-after-upgrade.  This fixes a regression caused by
    the fix for #989155.  (Closes: #994204)

  [ Johannes Schauer Marin Rodrigues ]
  * dh_installmenu: Respect DPKG_ROOT when checking for update-menus.
    Note this implementation assumes update-menus is present both
    inside and outside the chroot to activate.  If it is absent on
    either side, the update-menus call is skipped.

  [ Gioele Barabucci ]
  * dh_installsysusers: Invoke systemd-sysusers even when DPKG_ROOT
    is set (relying on `--root`).
  * dh_installpam: In compat 14, install pam snippets into
    `/usr/lib/pam.d` instead of `/etc/pam.d`.  Remember to remove
    (now) obsolete conffiles when you bump to compat 14.

  [ Andreas Hübner ]
  * debhelper.pod: Correct spelling of DEB_BUILD_MAINT_OPTIONS.

 -- Niels Thykier <niels@thykier.net>  Mon, 20 Dec 2021 12:55:03 +0000

debhelper (13.6) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_assistant: Avoid creating `debian/.debhelper` when the
    which-build-system sub command is invoked.  Thanks to
    Jelmer Vernooĳ for spotting that bug.
  * dh_assistant: Add new active-compat-level command, which
    outputs information about which compat level is declared
    and active.  It also tells how the compat level was
    declared.
  * Dh_Lib.pm: Add new function, get_non_binnmu_date_epoch,
    only needed for dh_strip_nondeterminism.