@@ -16,6 +16,11 @@ debhelper (13.7) UNRELEASED; urgency=medium
     to see the upgrade checklist.
   * dh_installdebconf: Support -D/--define command line parameters
     (mirroring those from dh_installdeb).
+  * Dh_Lib.pm: Cope with "?=" as assignment operator in substvars files
+    to be future proof with (possible) planned addition of "optional
+    substvars.  At the moment, debhelper will still always use "=" when
+    adding a substvar but it will now preserve "?=" operator if an
+    existing substvar is modified.
 
   [ Guillem Jover ]
   * autoconf.pm: Add support for autotest test suites by passing the
